--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "firebase": "^10.12.5",
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
@@ -31,7 +32,6 @@
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
   }
